knative-kubecon/eventing/020-egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: urbanobservatory-api
spec:
  hosts:
  - api.usb.urbanobservatory.ac.uk
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: urbanobservatory-api
spec:
  hosts:
  - api.usb.urbanobservatory.ac.uk
  tls:
  - match:
    - port: 443
      sni_hosts:
      - api.usb.urbanobservatory.ac.uk
    route:
    - destination:
        host: api.usb.urbanobservatory.ac.uk
        port:
          number: 443
      weight: 100
